--- a/Filtered_posts.ipynb
+++ b/Filtered_posts.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1lmCw-FNk44kRmZdd4kHnRnRqKRTQOgGi",
-      "authorship_tag": "ABX9TyPdaNjehZR9rYmO3uQnEKtn",
+      "authorship_tag": "ABX9TyNJI3uel7vQZjXmSQis0qif",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -965,7 +965,10 @@
     {
       "cell_type": "code",
       "source": [
+        "#extracts the hashtags for each post\n",
         "posts['hashtags'] = posts['video_description'].apply(getHashtags)\n",
+        "#remove posts with no hashtags\n",
+        "posts = posts[posts['hashtags'].map(lambda x: len(x)) > 0]\n",
         "posts.head()"
       ],
       "metadata": {
