Add documentation to video country of origin

--- a/data_analysis/following_countries.ipynb
+++ b/data_analysis/following_countries.ipynb
@@ -540,6 +540,9 @@
       "cell_type": "code",
       "source": [
         "import requests\n",
+        "'''\n",
+        "Function to read all files into a list given the information needed to recreate the path of the repo\n",
+        "'''\n",
         "def list_files_in_repo(owner, repo, path='', branch='master'):\n",
         "    api_url = f\"https://api.github.com/repos/{owner}/{repo}/contents/{path}?ref={branch}\"\n",
         "    response = requests.get(api_url)\n",
@@ -584,9 +587,12 @@
     {
       "cell_type": "code",
       "source": [
-        "#people = ['AH','LG','AW','RX','BB','SL']\n",
         "rawpath = 'https://raw.githubusercontent.com/amyhu0114/CS315-project2-group2/main/pyktok_collection/'\n",
         "\n",
+        "'''\n",
+        "Function to loop through the list of all files in the repo, then access the raw data using the raw.githubusercontent.com link for a specific person at a specific condition\n",
+        "given the file type of interest (ex: all videos or only liked videos).\n",
+        "'''\n",
         "def makeAllDF(person,condition,files,rawpath):\n",
         "  df = pd.DataFrame()\n",
         "\n",
@@ -594,8 +600,6 @@
         "    if person in f and condition in f:\n",
         "      this = pd.read_csv(rawpath+f)\n",
         "      df = pd.concat([df, this])\n",
-        "\n",
-        "      #print(f)\n",
         "\n",
         "  return df"
       ],
@@ -609,9 +613,8 @@
       "cell_type": "code",
       "source": [
         "user_33534 = makeAllDF('33534','results',files,rawpath)\n",
-        "#user_33534\n",
-        "user_11111 = pd.read_csv('https://raw.githubusercontent.com/amyhu0114/CS315-project2-group2/main/pyktok_collection/results.csv')\n",
-        "user_11111"
+        "user_26301 = makeAllDF('26301','results',files,rawpath) # 'https://raw.githubusercontent.com/amyhu0114/CS315-project2-group2/main/pyktok_collection/results.csv'\n",
+        "user_26301"
       ],
       "metadata": {
         "colab": {
@@ -1244,10 +1247,10 @@
     {
       "cell_type": "code",
       "source": [
-        "user_33534"
+        "# Find top 3 most frequent countries"
       ],
       "metadata": {
-        "id": "NeBpeQ_BzIYu"
+        "id": "cfonHByRs3tJ"
       },
       "execution_count": null,
       "outputs": []
@@ -1255,6 +1258,65 @@
     {
       "cell_type": "code",
       "source": [
+        "user_33534['video_locationcreated'].value_counts().nlargest(3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KZtxxuYStDm5",
+        "outputId": "d655f1ae-1d48-404e-bb35-a5343443221b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "US         518\n",
+              "FAKE-AD     87\n",
+              "GB          61\n",
+              "Name: video_locationcreated, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "user_11111['video_locationcreated'].value_counts().nlargest(3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bjK18QP_Z_Vn",
+        "outputId": "7b29ed14-ef5f-4a99-fe13-669e56172920"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "US         5411\n",
+              "FAKE-AD     724\n",
+              "GB          487\n",
+              "Name: video_locationcreated, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Data Exploration to investigate \"FAKE-AD\"\n",
         "user_33534[user_33534['video_locationcreated']==\"FAKE-AD\"][[\"video_locationcreated\",\"suggested_words\", \"author_followercount\", \"author_videocount\",\"video_is_ad\"]]"
       ],
       "metadata": {
@@ -1641,73 +1703,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "cfonHByRs3tJ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "user_33534['video_locationcreated'].value_counts().nlargest(3)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KZtxxuYStDm5",
-        "outputId": "d655f1ae-1d48-404e-bb35-a5343443221b"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "US         518\n",
-              "FAKE-AD     87\n",
-              "GB          61\n",
-              "Name: video_locationcreated, dtype: int64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 53
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "user_11111['video_locationcreated'].value_counts().nlargest(3)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bjK18QP_Z_Vn",
-        "outputId": "7b29ed14-ef5f-4a99-fe13-669e56172920"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "US         5411\n",
-              "FAKE-AD     724\n",
-              "GB          487\n",
-              "Name: video_locationcreated, dtype: int64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "source": [
         "def get_top_countries_frequent(List):\n",
         "    occurence_count = Counter(List)\n",
@@ -1743,7 +1738,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#fig, axes = plt.subplots(2, 3, figsize=(40, 20))\n",
+        "# Code to visualize the frequencies using barplot\n",
         "fig, axes = plt.subplots(1, 2, figsize=(40, 20))\n",
         "axes = axes.flatten()\n",
         "\n",
